# ml-engineer-at-magenta

./: .gitignore  Dockerfile  Makefile  README.md  dagster_docker.yaml  docker-compose.yml  public-age-keys.txt  pyproject.toml  workspace.yaml  workspace_docker.yaml  yamllintconfig.yaml
.devcontainer/: .devcontainer.json  devcontainer.json
.github/ISSUE_TEMPLATE/: user-story.md
documentation/secops/: add-key.md
notebooks/: explore.ipynb
prototyping/proxy/: README.md  docker-compose.yml
prototyping/proxy/services/proxy/rules/: middlewares-chains.yml  middlewares.yml
scripts/: decrypt_secrets.sh  encrypt_secrets.sh  git_clean_local_branches.sh  secops_config.sh  simplify-public-keys.sh
src/code_location_foo/: pyproject.toml
src/code_location_foo/quickstart_etl/: __init__.py
src/code_location_interview/: pyproject.toml
src/code_location_interview/code_location_interview/: __init__.py
src/code_location_interview/code_location_interview/assets/: dbt_assets.py
src/code_location_interview/code_location_interview/assets/magenta_interview/: deployment.py  get_data.py  predict.py  train.py
src/code_location_interview/code_location_interview/resources/: __init__.py  duckdb_path.py  sql_asset_keys.py
src/code_location_interview/code_location_interview_dbt/: .sqlfluff  .sqlfluffignore  .user.yml  analytics_database_dev.duckdb  dbt_project.yml  profiles.yml
src/code_location_interview/code_location_interview_dbt/macros/: create_latest_version_view.sql
src/code_location_interview/code_location_interview_tests/: test_defs_load.py
src/shared_library/: pyproject.toml
src/shared_library/shared_library/: __init__.py
src/shared_library/shared_library/orchestration/: dbt_translator.py
src/shared_library/shared_library/orchestration/resources/: utils.py
trained_models/: list-of-models.txt  model-2025-09-17_14-44-23.pickle  model-2025-09-18_10-04-16.pickle
