[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_library"
version = "1.0.0"
description = "Example library"
authors = [{ name = "Nadia Alloppi", email = "Your@email.com" }]
license = { text = "UNLICENSED" }
dependencies = []

[project.urls]
repository = "https://github.com/interview/interview"

[tool.setuptools.packages.find]
exclude = ["shared_library_tests"]
